# cloud_play

./: .covragerc  .gitignore  README.md  pyproject.toml
cloud_play/: file_finder.py  main.py  table_exists.py  table_finder.py
tests/: test_file_finder.py  test_main.py  test_table_exists.py  test_table_finder.py
